@@ -35,6 +35,8 @@ package org.restlet.test.resource;
 
 import java.io.Serializable;
 
+import org.restlet.engine.util.SystemUtils;
+
 /**
  * Test bean to be serialized.
  * 
@@ -89,12 +91,7 @@ public class MyBean implements Serializable {
 
     @Override
     public int hashCode() {
-        final int prime = 31;
-        int result = 1;
-        result = prime * result
-                + ((description == null) ? 0 : description.hashCode());
-        result = prime * result + ((name == null) ? 0 : name.hashCode());
-        return result;
+        return SystemUtils.hashCode(name, description);
     }
 
     public void setDescription(String description) {
