@@ -33,6 +33,7 @@
 
 package org.restlet.test.security;
 
+import org.restlet.Application;
 import org.restlet.security.Role;
 import org.restlet.test.RestletTestCase;
 
@@ -40,28 +41,39 @@ import org.restlet.test.RestletTestCase;
  * Suite of unit tests for the {@link Role} class.
  * 
  * @author Thierry Boileau
+ * @author Jerome Louvel
  */
 public class RoleTestCase extends RestletTestCase {
 
     public void testRoleEquality() {
-        Role role1 = new Role("role", "");
-        Role role2 = new Role("role", "");
-        assertNotSame(role1, role2);
+        Application app1 = new Application();
+        Application app2 = new Application();
 
-        Role role3 = new Role("role3", "");
-        Role role4 = new Role("role4", "");
+        Role role1 = new Role(app1, "role", "one description");
+        Role role2 = new Role(app1, "role", "another description");
+        Role role3 = new Role(app1, "role", null);
 
-        role1.getChildRoles().add(role3);
-        role1.getChildRoles().add(role4);
-        assertNotSame(role1, role2);
+        assertEquals(role1, role2);
+        assertEquals(role1, role3);
+        assertEquals(role2, role3);
 
-        role2.getChildRoles().add(role4);
-        role2.getChildRoles().add(role3);
-        assertNotSame(role1, role2);
+        Role role4 = new Role(app2, "role", "one description");
+        assertFalse(role1.equals(role4));
+
+        Role role10 = new Role("role10", "");
+        Role role11 = new Role("role11", "");
+
+        role1.getChildRoles().add(role10);
+        role1.getChildRoles().add(role11);
+        assertFalse(role1.equals(role2));
+
+        role2.getChildRoles().add(role11);
+        role2.getChildRoles().add(role10);
+        assertFalse(role1.equals(role2));
 
         role2.getChildRoles().clear();
-        role2.getChildRoles().add(role3);
-        role2.getChildRoles().add(role4);
-        assertNotSame(role1, role2);
+        role2.getChildRoles().add(role10);
+        role2.getChildRoles().add(role11);
+        assertEquals(role1, role2);
     }
 }
