@@ -38,6 +38,7 @@ import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 
 import org.restlet.Application;
+import org.restlet.engine.util.SystemUtils;
 
 /**
  * Application specific role. Common examples are "administrator", "user",
@@ -45,21 +46,33 @@ import org.restlet.Application;
  * recommended that those role don't reflect an actual organization, but more
  * the functional requirements of your application.
  * 
- * Also, two roles are not considered equals if they have the same the name and
- * child roles, they need to be the same Java object. If you need to reuse the
- * same role, you should call {@link Application#getRole(String)} method
- * instead.
+ * Also, two roles are not considered equals if they belong to the same parent
+ * application and have the same the name and child roles.
+ * 
+ * Since version 2.2, they need to be the same Java object. In order to prevent
+ * the multiplication of equal Role instances, you should try to call
+ * {@link Application#getRole(String)} method but this isn't mandatory anymore.
  * 
  * @author Jerome Louvel
+ * @author Tim Peierls
  */
 public class Role implements Principal {
 
     /**
      * Unmodifiable role that covers all existing roles. Its name is "*" by
      * convention.
+     * 
+     * @deprecated To be removed as it is ambiguous, roles being specific to a
+     *             given application.
      */
+    @Deprecated
     public static final Role ALL = new Role("*",
             "Role that covers all existing roles.") {
+        @Override
+        public void setApplication(Application application) {
+            throw new IllegalStateException("Unmodifiable role");
+        }
+
         @Override
         public void setDescription(String description) {
             throw new IllegalStateException("Unmodifiable role");
@@ -72,6 +85,9 @@ public class Role implements Principal {
 
     };
 
+    /** The parent application. */
+    private volatile Application application;
+
     /** The modifiable list of child roles. */
     private final List<Role> childRoles;
 
@@ -82,7 +98,8 @@ public class Role implements Principal {
     private volatile String name;
 
     /**
-     * Default constructor.
+     * Default constructor. Note that the parent application is retrieved using
+     * the {@link Application#getCurrent()} method.
      */
     public Role() {
         this(null, null);
@@ -90,6 +107,24 @@ public class Role implements Principal {
 
     /**
      * Constructor.
+     * 
+     * @param application
+     *            The parent application.
+     * @param name
+     *            The name.
+     * @param description
+     *            The description.
+     */
+    public Role(Application application, String name, String description) {
+        this.application = application;
+        this.name = name;
+        this.description = description;
+        this.childRoles = new CopyOnWriteArrayList<Role>();
+    }
+
+    /**
+     * Constructor. Note that the parent application is retrieved using the
+     * {@link Application#getCurrent()} method.
      * 
      * @param name
      *            The name.
@@ -99,7 +134,8 @@ public class Role implements Principal {
     }
 
     /**
-     * Constructor.
+     * Constructor. Note that the parent application is retrieved using the
+     * {@link Application#getCurrent()} method.
      * 
      * @param name
      *            The name.
@@ -107,9 +143,26 @@ public class Role implements Principal {
      *            The description.
      */
     public Role(String name, String description) {
-        this.name = name;
-        this.description = description;
-        this.childRoles = new CopyOnWriteArrayList<Role>();
+        this(Application.getCurrent(), name, description);
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (!(o instanceof Role))
+            return false;
+        Role role = (Role) o;
+        return SystemUtils.equals(role.getApplication(), getApplication())
+                && SystemUtils.equals(role.getName(), getName())
+                && SystemUtils.equals(role.getChildRoles(), getChildRoles());
+    }
+
+    /**
+     * Returns the parent application.
+     * 
+     * @return The parent application.
+     */
+    public Application getApplication() {
+        return application;
     }
 
     /**
@@ -137,6 +190,22 @@ public class Role implements Principal {
      */
     public String getName() {
         return name;
+    }
+
+    @Override
+    public int hashCode() {
+        return SystemUtils.hashCode(getApplication(), getName(),
+                getChildRoles());
+    }
+
+    /**
+     * Sets the parent application.
+     * 
+     * @param application
+     *            The parent application.
+     */
+    public void setApplication(Application application) {
+        this.application = application;
     }
 
     /**
